--- a/first.html
+++ b/first.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 hello hello
-  <img src="IMG_1909.PNG" width="100" height="50">
+  <img src="LMG_1909.PNG" width="100" height="50">
 </body>
 </html>
