--- a/first.html
+++ b/first.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 hello hello
-  <img src="IMG_1168.jpeg" width="700" height="500">
+  <img src="https://github.com/hallo-world16/my-first-webpage/blob/main/IMG_1902.png" width="700" height="500">
 </body>
 </html>
