--- a/first.html
+++ b/first.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 hello hello
-  <img src="IMG_1909.PNG" width="700" height="500">
+  <img src="‎IMG_1909.jpeg" width="700" height="500">
 </body>
 </html>
