--- a/first.html
+++ b/first.html
@@ -4,6 +4,6 @@
   <p1>oof</p1>
   <h2></h2>
   <img src="IMG_1909.jpeg" width="900" height="500">
-  <p2>Hlink : <a href="<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=2243843&bvid=BV1ss411D7gG&cid=23738729&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>" target="_blank">Example.com</a>.</p2>
+  <p2>Hlink : <a href="<iframe src="https://www.bilibili.com/video/BV1ss411D7gG/?share_source=copy_web" target="_blank">Example.com</a>.</p2>
 </body>
 </html>
