--- a/first.html
+++ b/first.html
@@ -4,6 +4,6 @@
   <p1>oof</p1>
   <h2></h2>
   <img src="IMG_1909.jpeg" width="900" height="500">
-  <p2>Hlink : <a href="https://youtu.be/dQw4w9WgXcQ?si=Pm9w_GxrHXtHCr9n" target="_blank">Youtube</a>.</p2>
+  <p2>Hlink : <a href="https://youtu.be/dQw4w9WgXcQ?si=Pm9w_GxrHXtHCr9n" target="_blank">rick</a>.</p2>
 </body>
 </html>
