--- a/first.html
+++ b/first.html
@@ -4,7 +4,6 @@
   <p1>oof</p1>
   <h2></h2>
   <img src="IMG_1909.jpeg" width="900" height="500">
-  <h3>link : <a href="https://youtu.be/dQw4w9WgXcQ?si=Pm9w_GxrHXtHCr9n" target="_blank"></a></h3>
-    <p2>the link</a>.</p2>
+  <h3>link : <a href="https://youtu.be/dQw4w9WgXcQ?si=Pm9w_GxrHXtHCr9n" target="_blank">the link</a></h3>
 </body>
 </html>
