--- a/Task3.html
+++ b/Task3.html
@@ -5,119 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enhanced Matching Game</title>
     <style>
-        :root {
-            --correct-color: #d4edda;
-            --incorrect-color: #f8d7da;
-            --primary-color: #007bff;
-            --hover-color: #0056b3;
-            --shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            --dragover-color: #e9ecef;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 900px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #f5f5f5;
-        }
-
-        .container {
-            display: flex;
-            gap: 40px;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-
-        .terms, .definitions {
-            flex: 1;
-            min-width: 300px;
-        }
-
-        .item {
-            background: white;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 8px;
-            cursor: grab;
-            box-shadow: var(--shadow);
-            transition: all 0.3s ease;
-            touch-action: none;
-            user-select: none;
-        }
-
-        .item.dragging {
-            opacity: 0.5;
-            transform: scale(0.95);
-        }
-
-        .item.correct {
-            background: var(--correct-color);
-            border: 2px solid #28a745;
-        }
-
-        .item.incorrect {
-            background: var(--incorrect-color);
-            border: 2px solid #dc3545;
-        }
-
-        .item.selected {
-            border: 2px solid var(--primary-color);
-        }
-
-        .item.dragover {
-            background-color: var(--dragover-color);
-            transform: scale(1.02);
-        }
-
-        .score {
-            text-align: center;
-            font-size: 1.2em;
-            margin: 20px 0;
-        }
-
-        button {
-            display: block;
-            margin: 20px auto;
-            padding: 10px 20px;
-            font-size: 1em;
-            background: var(--primary-color);
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background: var(--hover-color);
-        }
-
-        .matches {
-            margin-top: 20px;
-        }
-
-        .match-pair {
-            display: flex;
-            gap: 20px;
-            margin: 10px 0;
-            align-items: center;
-        }
-
-        .match-pair::after {
-            content: "⟶";
-            font-size: 1.5em;
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                flex-direction: column;
-            }
-        }
-
-        .item:focus {
-            outline: 2px solid var(--primary-color);
-            outline-offset: 2px;
-        }
+        /* Add your CSS styles here */
     </style>
 </head>
 <body>
