--- a/Task3.html
+++ b/Task3.html
@@ -3,9 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enhanced Matching Game</title>
+    <title>Matching Game</title>
     <style>
-        /* Add your CSS styles here */
+        :root {
+            --correct-color: #d4edda;
+            --incorrect-color: #f8d7da;
+            --primary-color: #007bff;
+            --hover-color: #0056b3;
+            --shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 900px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #f5f5f5;
+        }
+
+        .container {
+            display: flex;
+            gap: 40px;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        .terms, .definitions {
+            flex: 1;
+            min-width: 300px;
+        }
+
+        .item {
+            background: white;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 8px;
+            cursor: pointer;
+            box-shadow: var(--shadow);
+            transition: all 0.3s ease;
+        }
+
+        .item.selected {
+            border: 2px solid var(--primary-color);
+        }
+
+        .item.correct {
+            background: var(--correct-color);
+            border: 2px solid #28a745;
+        }
+
+        .item.incorrect {
+            background: var(--incorrect-color);
+            border: 2px solid #dc3545;
+        }
+
+        .score {
+            text-align: center;
+            font-size: 1.2em;
+            margin: 20px 0;
+        }
+
+        button {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            font-size: 1em;
+            background: var(--primary-color);
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background: var(--hover-color);
+        }
+
+        .matches {
+            margin-top: 20px;
+        }
+
+        .match-pair {
+            display: flex;
+            gap: 20px;
+            margin: 10px 0;
+            align-items: center;
+        }
+
+        .match-pair::after {
+            content: "⟶";
+            font-size: 1.5em;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                flex-direction: column;
+            }
+        }
     </style>
 </head>
 <body>
@@ -35,7 +129,6 @@
         let matches = new Map();
         let score = 0;
         let selectedTerm = null;
-        const isTouchDevice = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
 
         function shuffle(array) {
             for (let i = array.length - 1; i > 0; i--) {
@@ -58,10 +151,11 @@
             defIndices.forEach(originalIndex => {
                 const term = data[originalIndex].term;
                 termsDiv.innerHTML += `
-                    <div class="item" draggable="${!isTouchDevice}" 
+                    <div class="item" 
                         data-id="${originalIndex + 1}" 
                         tabindex="0"
-                        aria-label="Term: ${term}">
+                        aria-label="Term: ${term}"
+                        onclick="handleTermClick(this)">
                         ${term}
                     </div>
                 `;
@@ -74,63 +168,25 @@
                     <div class="item" 
                         data-match="${originalIndex + 1}"
                         tabindex="0"
-                        aria-label="Definition: ${definition}">
+                        aria-label="Definition: ${definition}"
+                        onclick="handleDefClick(this)">
                         ${definition}
                     </div>
                 `;
             });
-
-            setupEventListeners();
         }
 
-        function setupEventListeners() {
-            // Clear existing listeners
-            const terms = document.querySelectorAll('.terms .item');
-            const definitions = document.querySelectorAll('.definitions .item');
-
-            terms.forEach(term => {
-                term.replaceWith(term.cloneNode(true));
-            });
-            definitions.forEach(def => {
-                def.replaceWith(def.cloneNode(true));
-            });
-
-            // Set up new listeners
-            if (isTouchDevice) {
-                document.querySelectorAll('.terms .item').forEach(item => {
-                    item.addEventListener('click', handleTermClick);
-                    item.addEventListener('keydown', handleKeyDown);
-                });
-                document.querySelectorAll('.definitions .item').forEach(item => {
-                    item.addEventListener('click', handleDefClick);
-                    item.addEventListener('keydown', handleKeyDown);
-                });
-            } else {
-                document.querySelectorAll('.terms .item').forEach(item => {
-                    item.addEventListener('dragstart', handleDragStart);
-                    item.addEventListener('dragend', handleDragEnd);
-                    item.addEventListener('keydown', handleKeyDown);
-                });
-                document.querySelectorAll('.definitions .item').forEach(item => {
-                    item.addEventListener('dragover', handleDragOver);
-                    item.addEventListener('drop', handleDrop);
-                    item.addEventListener('dragleave', handleDragLeave);
-                    item.addEventListener('keydown', handleKeyDown);
-                });
-            }
-        }
-
-        function handleTermClick() {
+        function handleTermClick(term) {
             if (selectedTerm) selectedTerm.classList.remove('selected');
-            selectedTerm = this;
-            this.classList.add('selected');
+            selectedTerm = term;
+            term.classList.add('selected');
         }
 
-        function handleDefClick() {
+        function handleDefClick(def) {
             if (!selectedTerm) return;
             
             const termId = selectedTerm.dataset.id;
-            const defMatch = this.dataset.match;
+            const defMatch = def.dataset.match;
 
             // Remove existing matches
             matches.delete(termId);
@@ -142,51 +198,6 @@
             updateMatches();
             selectedTerm.classList.remove('selected');
             selectedTerm = null;
-        }
-
-        function handleDragStart(e) {
-            this.classList.add('dragging');
-            e.dataTransfer.effectAllowed = 'move';
-            e.dataTransfer.setData('text/plain', '');
-        }
-
-        function handleDragEnd() {
-            this.classList.remove('dragging');
-        }
-
-        function handleDragOver(e) {
-            e.preventDefault();
-            this.classList.add('dragover');
-            e.dataTransfer.dropEffect = 'move';
-        }
-
-        function handleDragLeave() {
-            this.classList.remove('dragover');
-        }
-
-        function handleDrop(e) {
-            e.preventDefault();
-            this.classList.remove('dragover');
-            const term = document.querySelector('.terms .item.dragging');
-            if (!term) return;
-
-            const termId = term.dataset.id;
-            const defMatch = this.dataset.match;
-
-            matches.delete(termId);
-            matches.forEach((value, key) => {
-                if (value === defMatch) matches.delete(key);
-            });
-
-            matches.set(termId, defMatch);
-            updateMatches();
-        }
-
-        function handleKeyDown(e) {
-            if (e.key === 'Enter') {
-                if (this.closest('.terms')) handleTermClick.call(this, e);
-                else if (selectedTerm) handleDefClick.call(this, e);
-            }
         }
 
         function updateMatches() {
