--- a/Task3.html
+++ b/Task3.html
@@ -97,25 +97,102 @@
             border-radius: 5px;
             cursor: pointer;
         }
+
+        .login-form {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: var(--shadow);
+            max-width: 500px;
+            margin: 50px auto;
+        }
+
+        .login-form h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
+        .form-group input, .form-group select {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        .start-btn {
+            width: 100%;
+            padding: 10px;
+            background: var(--primary-color);
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 1em;
+        }
+
+        .start-btn:hover {
+            background: var(--hover-color);
+        }
+
+        .game-content {
+            display: none;
+        }
+
+        .user-info {
+            text-align: center;
+            margin-bottom: 20px;
+            font-size: 1.2em;
+        }
     </style>
 </head>
 <body>
-    <h1>國家安全配對遊戲</h1>
-    <div class="score">得分: <span id="score">0</span> / 5</div>
-    <div class="timer">剩餘時間: <span id="time">01:00</span></div>
-    <div class="container">
-        <div class="terms">
-            <h2>術語</h2>
-            <!-- 術語將在這裡動態生成 -->
+    <div class="login-form" id="loginForm">
+        <h2>請輸入學生信息</h2>
+        <div class="form-group">
+            <label for="class">班別 (1-6, A-D):</label>
+            <input type="text" id="class" pattern="[1-6A-Da-d]" title="請輸入1-6或A-D" required>
         </div>
-        <div class="definitions">
-            <h2>定義</h2>
-            <!-- 定義將在這裡動態生成 -->
+        <div class="form-group">
+            <label for="studentId">學號 (1-40):</label>
+            <input type="number" id="studentId" min="1" max="40" required>
         </div>
+        <div class="form-group">
+            <label for="name">姓名:</label>
+            <input type="text" id="name" required>
+        </div>
+        <button class="start-btn" onclick="startGame()">開始遊戲</button>
     </div>
-    <button onclick="resetGame()">重置</button>
-    <button class="next-page" id="nextPage" onclick="loadNextPage()">下一頁</button>
-    <div class="congratulations" id="congratulations"></div>
+
+    <div class="game-content" id="gameContent">
+        <h1>國家安全配對遊戲</h1>
+        <div class="user-info" id="userInfo"></div>
+        <div class="score">得分: <span id="score">0</span> / 5</div>
+        <div class="timer">剩餘時間: <span id="time">01:00</span></div>
+        <div class="container">
+            <div class="terms">
+                <h2>術語</h2>
+                <!-- 術語將在這裡動態生成 -->
+            </div>
+            <div class="definitions">
+                <h2>定義</h2>
+                <!-- 定義將在這裡動態生成 -->
+            </div>
+        </div>
+        <button onclick="resetGame()">重置</button>
+        <button class="next-page" id="nextPage" onclick="loadNextPage()">下一頁</button>
+        <div class="congratulations" id="congratulations"></div>
+    </div>
 
     <script>
         // 第一頁數據
@@ -143,12 +220,48 @@
         let timeLeft = 60;
         let timerInterval = null;
         let attempts = 0;
+        let userInfo = {};
 
-        // 初始化遊戲
-        document.addEventListener('DOMContentLoaded', function() {
+        function startGame() {
+            const classInput = document.getElementById('class').value.toUpperCase();
+            const studentId = document.getElementById('studentId').value;
+            const name = document.getElementById('name').value;
+
+            // 驗證輸入
+            if (!/^[1-6A-D]$/.test(classInput)) {
+                alert('請輸入有效的班別 (1-6 或 A-D)');
+                return;
+            }
+
+            if (studentId < 1 || studentId > 40) {
+                alert('請輸入有效的學號 (1-40)');
+                return;
+            }
+
+            if (!name.trim()) {
+                alert('請輸入姓名');
+                return;
+            }
+
+            // 保存用戶信息
+            userInfo = {
+                class: classInput,
+                studentId: studentId,
+                name: name.trim()
+            };
+
+            // 顯示用戶信息
+            document.getElementById('userInfo').textContent = 
+                `班別: ${userInfo.class} 學號: ${userInfo.studentId} 姓名: ${userInfo.name}`;
+
+            // 切換到遊戲界面
+            document.getElementById('loginForm').style.display = 'none';
+            document.getElementById('gameContent').style.display = 'block';
+
+            // 初始化遊戲
             loadGame();
             startTimer();
-        });
+        }
 
         function shuffle(array) {
             const newArray = [...array];
@@ -246,6 +359,7 @@
                     } else {
                         document.getElementById('congratulations').innerHTML = `
                             恭喜！通關成功！<br>
+                            班別: ${userInfo.class} 學號: ${userInfo.studentId} 姓名: ${userInfo.name}<br>
                             您共嘗試了 ${attempts} 次<br>
                             用時: ${formatTime(60 - timeLeft)}
                         `;
@@ -271,7 +385,10 @@
             currentData = page2Data;
             document.getElementById('nextPage').style.display = 'none';
             document.getElementById('congratulations').style.display = 'none';
+            timeLeft = 60;
+            document.getElementById('time').textContent = "01:00";
             loadGame();
+            startTimer();
         }
 
         function resetGame() {
